gen/AngulerParser.java
// Generated from D:/IntelliJ projects/Anguler_compiler/src/AngulerParser.g4 by ANTLR 4.13.2
package gen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class AngulerParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMA=1, DOUBLE_QUOT=2, BOOLEAN=3, LARACE=4, RARACE=5, LBRACE=6, RBRACE=7, 
		SEMI=8, WORD_VALUE=9, STRING_LITERAL=10, IMPORT=11, FROM=12, IMPORT_LRACE=13, 
		MODULE_NAME=14, IMPORT_RRACE=15, Component_OPEN=16, APPComponent_OPEN=17, 
		Component_COMMA=18, Component_OPEN_RACE=19, SELECTOR=20, SELECTOR_QUOT=21, 
		SELECTOR_BODY=22, STANDALONE=23, STANDALONE_VALUE=24, IMPORTS=25, IMPORTS_LRACE=26, 
		IMPORTS_RRACE=27, TEMPLATE_OPEN=28, STYLES_OPEN=29, Component_CLOSE_RACE=30, 
		Component_CLOSE=31, OPEN_DIV=32, Template_Close=33, Styles_Lrace=34, CSS_BODY=35, 
		Styles_Rrace=36, P_app=37, P_list=38, P_card=39, P_card_h=40, P_card_i=41, 
		P_detail=42, P_detail_i=43, STYLES_CLOSE=44, OPEN_NEW_DIV=45, IN_DIV=46, 
		TAG_VALUE=47, H1_Open=48, H1_Close=49, H2_Open=50, H2_Close=51, H3_Open=52, 
		H3_Close=53, H4_Open=54, H4_Close=55, H5_Open=56, H5_Close=57, H6_Open=58, 
		H6_Close=59, IMG_Open=60, IMG_Close=61, P_Open=62, P_Close=63, SPAN_Open=64, 
		SPAN_Close=65, STRONG_Open=66, STRONG_Close=67, EM_Open=68, EM_Close=69, 
		I_Open=70, I_Close=71, U_Open=72, U_Close=73, B_Open=74, B_Close=75, SMALL_Open=76, 
		SMALL_Close=77, MARK_Open=78, MARK_Close=79, HEADER_Open=80, HEADER_Close=81, 
		SECTION_Open=82, SECTION_Close=83, ARTICLE_Open=84, ARTICLE_Close=85, 
		ASIDE_Open=86, ASIDE_Close=87, DETAILS_Open=88, DETAILS_Close=89, A_Open=90, 
		A_Close=91, UL_Open=92, UL_Close=93, OL_Open=94, OL_Close=95, LI_Open=96, 
		LI_Close=97, NAV_Open=98, NAV_Close=99, CLOSE_DIV=100, APPComponent_RACE_OPEN=101, 
		Array_Product_OPEN=102, SelectedProduct=103, OnProductClick=104, APPComponent_RACE_CLOSE=105, 
		Array_COMMA=106, Array_Product_RACE_OPEN=107, Array_Product_RACE_CLOSE=108, 
		Array_element_Open=109, Element_name=110, Element_value=111, Element_quot=112, 
		Array_element_Close=113, Array_Product_SEMI=114, ProductClick_Attribute=115, 
		ProductClick_Open=116, ProductClick_body=117, ProductClick_SEMI=118, ProductClick_Close=119, 
		Space=120, Elment_value_AB=121;
	public static final int
		RULE_app = 0, RULE_imporT = 1, RULE_importStatement = 2, RULE_importFrom = 3, 
		RULE_importedSymbols = 4, RULE_component = 5, RULE_component_body = 6, 
		RULE_component_entry = 7, RULE_template = 8, RULE_template_body = 9, RULE_div_body = 10, 
		RULE_html_element = 11, RULE_div = 12, RULE_styles = 13, RULE_styles_body = 14, 
		RULE_appComponent = 15, RULE_appComponent_body = 16, RULE_products = 17, 
		RULE_productElement = 18, RULE_element_Array = 19, RULE_element_body = 20, 
		RULE_element_name = 21, RULE_selectedProduct = 22, RULE_click = 23;
	private static String[] makeRuleNames() {
		return new String[] {
			"app", "imporT", "importStatement", "importFrom", "importedSymbols", 
			"component", "component_body", "component_entry", "template", "template_body", 
			"div_body", "html_element", "div", "styles", "styles_body", "appComponent", 
			"appComponent_body", "products", "productElement", "element_Array", "element_body", 
			"element_name", "selectedProduct", "click"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "'\"'", null, "'['", "']'", "'{'", "'}'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMA", "DOUBLE_QUOT", "BOOLEAN", "LARACE", "RARACE", "LBRACE", 
			"RBRACE", "SEMI", "WORD_VALUE", "STRING_LITERAL", "IMPORT", "FROM", "IMPORT_LRACE", 
			"MODULE_NAME", "IMPORT_RRACE", "Component_OPEN", "APPComponent_OPEN", 
			"Component_COMMA", "Component_OPEN_RACE", "SELECTOR", "SELECTOR_QUOT", 
			"SELECTOR_BODY", "STANDALONE", "STANDALONE_VALUE", "IMPORTS", "IMPORTS_LRACE", 
			"IMPORTS_RRACE", "TEMPLATE_OPEN", "STYLES_OPEN", "Component_CLOSE_RACE", 
			"Component_CLOSE", "OPEN_DIV", "Template_Close", "Styles_Lrace", "CSS_BODY", 
			"Styles_Rrace", "P_app", "P_list", "P_card", "P_card_h", "P_card_i", 
			"P_detail", "P_detail_i", "STYLES_CLOSE", "OPEN_NEW_DIV", "IN_DIV", "TAG_VALUE", 
			"H1_Open", "H1_Close", "H2_Open", "H2_Close", "H3_Open", "H3_Close", 
			"H4_Open", "H4_Close", "H5_Open", "H5_Close", "H6_Open", "H6_Close", 
			"IMG_Open", "IMG_Close", "P_Open", "P_Close", "SPAN_Open", "SPAN_Close", 
			"STRONG_Open", "STRONG_Close", "EM_Open", "EM_Close", "I_Open", "I_Close", 
			"U_Open", "U_Close", "B_Open", "B_Close", "SMALL_Open", "SMALL_Close", 
			"MARK_Open", "MARK_Close", "HEADER_Open", "HEADER_Close", "SECTION_Open", 
			"SECTION_Close", "ARTICLE_Open", "ARTICLE_Close", "ASIDE_Open", "ASIDE_Close", 
			"DETAILS_Open", "DETAILS_Close", "A_Open", "A_Close", "UL_Open", "UL_Close", 
			"OL_Open", "OL_Close", "LI_Open", "LI_Close", "NAV_Open", "NAV_Close", 
			"CLOSE_DIV", "APPComponent_RACE_OPEN", "Array_Product_OPEN", "SelectedProduct", 
			"OnProductClick", "APPComponent_RACE_CLOSE", "Array_COMMA", "Array_Product_RACE_OPEN", 
			"Array_Product_RACE_CLOSE", "Array_element_Open", "Element_name", "Element_value", 
			"Element_quot", "Array_element_Close", "Array_Product_SEMI", "ProductClick_Attribute", 
			"ProductClick_Open", "ProductClick_body", "ProductClick_SEMI", "ProductClick_Close", 
			"Space", "Elment_value_AB"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "AngulerParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AngulerParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class AppContext extends ParserRuleContext {
		public ComponentContext component() {
			return getRuleContext(ComponentContext.class,0);
		}
		public AppComponentContext appComponent() {
			return getRuleContext(AppComponentContext.class,0);
		}
		public List<ImporTContext> imporT() {
			return getRuleContexts(ImporTContext.class);
		}
		public ImporTContext imporT(int i) {
			return getRuleContext(ImporTContext.class,i);
		}
		public AppContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_app; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterApp(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitApp(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitApp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AppContext app() throws RecognitionException {
		AppContext _localctx = new AppContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_app);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(48);
				imporT();
				}
				}
				setState(51); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==IMPORT );
			setState(53);
			component();
			setState(54);
			appComponent();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImporTContext extends ParserRuleContext {
		public ImportStatementContext importStatement() {
			return getRuleContext(ImportStatementContext.class,0);
		}
		public ImportFromContext importFrom() {
			return getRuleContext(ImportFromContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(AngulerParser.SEMI, 0); }
		public ImporTContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_imporT; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterImporT(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitImporT(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitImporT(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImporTContext imporT() throws RecognitionException {
		ImporTContext _localctx = new ImporTContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_imporT);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56);
			importStatement();
			setState(57);
			importFrom();
			setState(58);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportStatementContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(AngulerParser.IMPORT, 0); }
		public TerminalNode IMPORT_LRACE() { return getToken(AngulerParser.IMPORT_LRACE, 0); }
		public TerminalNode IMPORT_RRACE() { return getToken(AngulerParser.IMPORT_RRACE, 0); }
		public List<ImportedSymbolsContext> importedSymbols() {
			return getRuleContexts(ImportedSymbolsContext.class);
		}
		public ImportedSymbolsContext importedSymbols(int i) {
			return getRuleContext(ImportedSymbolsContext.class,i);
		}
		public ImportStatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importStatement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterImportStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitImportStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitImportStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportStatementContext importStatement() throws RecognitionException {
		ImportStatementContext _localctx = new ImportStatementContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importStatement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(IMPORT);
			setState(61);
			match(IMPORT_LRACE);
			setState(63); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(62);
				importedSymbols();
				}
				}
				setState(65); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==MODULE_NAME );
			setState(67);
			match(IMPORT_RRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportFromContext extends ParserRuleContext {
		public TerminalNode FROM() { return getToken(AngulerParser.FROM, 0); }
		public List<TerminalNode> DOUBLE_QUOT() { return getTokens(AngulerParser.DOUBLE_QUOT); }
		public TerminalNode DOUBLE_QUOT(int i) {
			return getToken(AngulerParser.DOUBLE_QUOT, i);
		}
		public TerminalNode STRING_LITERAL() { return getToken(AngulerParser.STRING_LITERAL, 0); }
		public ImportFromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importFrom; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterImportFrom(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitImportFrom(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitImportFrom(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportFromContext importFrom() throws RecognitionException {
		ImportFromContext _localctx = new ImportFromContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_importFrom);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			match(FROM);
			setState(70);
			match(DOUBLE_QUOT);
			setState(71);
			match(STRING_LITERAL);
			setState(72);
			match(DOUBLE_QUOT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ImportedSymbolsContext extends ParserRuleContext {
		public List<TerminalNode> MODULE_NAME() { return getTokens(AngulerParser.MODULE_NAME); }
		public TerminalNode MODULE_NAME(int i) {
			return getToken(AngulerParser.MODULE_NAME, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AngulerParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AngulerParser.COMMA, i);
		}
		public ImportedSymbolsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importedSymbols; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterImportedSymbols(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitImportedSymbols(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitImportedSymbols(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ImportedSymbolsContext importedSymbols() throws RecognitionException {
		ImportedSymbolsContext _localctx = new ImportedSymbolsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_importedSymbols);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(MODULE_NAME);
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(75);
				match(COMMA);
				setState(76);
				match(MODULE_NAME);
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ComponentContext extends ParserRuleContext {
		public TerminalNode Component_OPEN() { return getToken(AngulerParser.Component_OPEN, 0); }
		public TerminalNode Component_OPEN_RACE() { return getToken(AngulerParser.Component_OPEN_RACE, 0); }
		public Component_bodyContext component_body() {
			return getRuleContext(Component_bodyContext.class,0);
		}
		public TerminalNode Component_CLOSE_RACE() { return getToken(AngulerParser.Component_CLOSE_RACE, 0); }
		public TerminalNode Component_CLOSE() { return getToken(AngulerParser.Component_CLOSE, 0); }
		public ComponentContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterComponent(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitComponent(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitComponent(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ComponentContext component() throws RecognitionException {
		ComponentContext _localctx = new ComponentContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_component);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(Component_OPEN);
			setState(83);
			match(Component_OPEN_RACE);
			setState(84);
			component_body();
			setState(85);
			match(Component_CLOSE_RACE);
			setState(86);
			match(Component_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Component_bodyContext extends ParserRuleContext {
		public List<Component_entryContext> component_entry() {
			return getRuleContexts(Component_entryContext.class);
		}
		public Component_entryContext component_entry(int i) {
			return getRuleContext(Component_entryContext.class,i);
		}
		public List<TerminalNode> Component_COMMA() { return getTokens(AngulerParser.Component_COMMA); }
		public TerminalNode Component_COMMA(int i) {
			return getToken(AngulerParser.Component_COMMA, i);
		}
		public Component_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterComponent_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitComponent_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitComponent_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Component_bodyContext component_body() throws RecognitionException {
		Component_bodyContext _localctx = new Component_bodyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_component_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			component_entry();
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Component_COMMA) {
				{
				{
				setState(89);
				match(Component_COMMA);
				setState(90);
				component_entry();
				}
				}
				setState(95);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Component_entryContext extends ParserRuleContext {
		public Component_entryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_component_entry; }
	 
		public Component_entryContext() { }
		public void copyFrom(Component_entryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Styles_dataContext extends Component_entryContext {
		public StylesContext styles() {
			return getRuleContext(StylesContext.class,0);
		}
		public Styles_dataContext(Component_entryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterStyles_data(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitStyles_data(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitStyles_data(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Imports_dataContext extends Component_entryContext {
		public TerminalNode IMPORTS() { return getToken(AngulerParser.IMPORTS, 0); }
		public TerminalNode IMPORTS_LRACE() { return getToken(AngulerParser.IMPORTS_LRACE, 0); }
		public TerminalNode SELECTOR_BODY() { return getToken(AngulerParser.SELECTOR_BODY, 0); }
		public TerminalNode IMPORTS_RRACE() { return getToken(AngulerParser.IMPORTS_RRACE, 0); }
		public Imports_dataContext(Component_entryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterImports_data(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitImports_data(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitImports_data(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Standalone_dataContext extends Component_entryContext {
		public TerminalNode STANDALONE() { return getToken(AngulerParser.STANDALONE, 0); }
		public TerminalNode STANDALONE_VALUE() { return getToken(AngulerParser.STANDALONE_VALUE, 0); }
		public Standalone_dataContext(Component_entryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterStandalone_data(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitStandalone_data(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitStandalone_data(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Template_dataContext extends Component_entryContext {
		public TemplateContext template() {
			return getRuleContext(TemplateContext.class,0);
		}
		public Template_dataContext(Component_entryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterTemplate_data(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitTemplate_data(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitTemplate_data(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class Selector_dataContext extends Component_entryContext {
		public TerminalNode SELECTOR() { return getToken(AngulerParser.SELECTOR, 0); }
		public List<TerminalNode> SELECTOR_QUOT() { return getTokens(AngulerParser.SELECTOR_QUOT); }
		public TerminalNode SELECTOR_QUOT(int i) {
			return getToken(AngulerParser.SELECTOR_QUOT, i);
		}
		public TerminalNode SELECTOR_BODY() { return getToken(AngulerParser.SELECTOR_BODY, 0); }
		public Selector_dataContext(Component_entryContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).enterSelector_data(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AngulerParserListener ) ((AngulerParserListener)listener).exitSelector_data(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof AngulerParserVisitor ) return ((AngulerParserVisitor<? extends T>)visitor).visitSelector_data(this);
			else return visitor.visitChildren(this);
		}
	}
